Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70084

QHeaderView section indicator loses "hi-res"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.0 Alpha
    • 5.11.1
    • Widgets: Itemviews
    • None
    • All
    • d18444fbfffbb01a9eb2d84454e55c231fe0a36f

    Description

      When moving a section in a QHeaderView, the generated section indicator always has a devicePixelRatio of 1. On devices with a higher pixel ratio, this gives poor results.

      The attached screenshot is from moving a section in the "Custom Sort/Filter Model Example". It might not be the worst example, but should be easy to reproduce.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            christiani Frederik Christiani
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes