Handle device pixel ratio in QHeaderView::setupSectionIndicator

The device pixel ratio was not applied to the section indicator pixmap
which made it look blurry on HighDPI screens.

Task-number: QTBUG-70084
Change-Id: I8b07b2ffc51781c2d2d89484b8618173f0692fe4
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>